<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="6dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mFlag"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/mTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:paddingLeft="6dp"
                android:text="@{listItem.title}"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/ic_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/buying" />

                <TextView
                    android:id="@+id/mBuy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@{String.valueOf(listItem.buy)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/sales" />

                <TextView
                    android:id="@+id/mSell"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@{String.valueOf(listItem.sell)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/difference" />

                <TextView
                    android:id="@+id/mChange"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:text="@{listItem.change}" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
